--- a/styles.css
+++ b/styles.css
@@ -692,7 +692,7 @@ textarea {
   /* HEADER & NAVBAR */
   .header-inner {
     padding: 0 20px;
-    margin: 0 50px;
+    margin: 0 0;
   }
 
   .brand-text {
