--- a/styles.css
+++ b/styles.css
@@ -628,13 +628,18 @@ textarea {
   }
 
   .cards {
-    grid-template-columns: 1fr;
-    gap: 16px;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 14px;
     justify-items: center;
+    width: 100%;
   }
 
   .info-card {
+    width: 100%;
+    max-width: 350px;
     justify-content: flex-start;
+    padding: 14px;
     gap: 10px;
   }
 
@@ -643,7 +648,7 @@ textarea {
   }
 
   .info-card .card-images {
-    width: 90px;
+    width: 85px;
   }
 
   /* CONTACT SECTION */
@@ -753,7 +758,6 @@ textarea {
   /* ABOUT SECTION */
   .about {
     padding: 30px 15px;
-    gap: 20px;
   }
 
   .about-left h2 {
@@ -762,6 +766,23 @@ textarea {
 
   .about-left .about-text {
     font-size: 15px;
+  }
+
+  .about-right {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+
+  .cards {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 14px;
+    justify-items: center;
+    width: 100%;
+  }
+
+  .info-card {
+    width: 100%;
   }
 
   .info-card h3 {
